--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django>=4.3.0,<5.0
-djangorestframework>=3.14.0
-django-cors-headers>=4.3.0
-mysqlclient>=2.1.1
+Django>=4.2,<5.0
+djangorestframework
+django-cors-headers
+mysqlclient
