--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,9 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 frontend/agrovet/
+requirements.txt
+chat/asgi.py
+consultveterinarias/__init__.py
+requirements.txt
+chat/asgi.py
+chat/asgi.py
