--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 Django>=4.2,<5.0
 djangorestframework
 django-cors-headers
-mysqlclient
 Pillow
 supabase
 drf-yasg
@@ -14,4 +13,5 @@ djangorestframework-simplejwt
 drf-yasg
 python-dotenv
 requests
+daphne
 
