Refactor settings and update dependencies
Reorganized Django settings for clarity, added environment variable support for Supabase and database configuration, and improved security settings. Updated requirements.txt to include missing packages and reorder dependencies for consistency.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,21 @@
-Django>=4.2,<5.0
-djangorestframework
-django-cors-headers
-Pillow
-supabase
-drf-yasg
-django-filter
-python-dotenv
-twilio
-pymysql
 channels
 channels-redis
+coverage
+Django>=4.2,<5.0
+djangorestframework
 djangorestframework-simplejwt
+django-cors-headers
+django-filter
 drf-yasg
+mysqlclient
+pymysql
+Pillow
+psycopg2-binary
 python-dotenv
 requests
-daphne
-psycopg2-binary
-whitenoise>=6.4.0
 redis>=4.6.0
-mysqlclient
-redis
-coverage
+supabase
+twilio
+whitenoise>=6.4.0
+daphne
+django-redis
