Add deployment config files and update dependencies
Added .env.example and Procfile for deployment setup, including environment variable templates and process definitions for Gunicorn and Daphne. Updated requirements.txt to include 'channels' and made minor formatting changes. Simplified asgi.py by removing comments and streamlining imports for ASGI configuration.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+channels
 channels-redis
 coverage
 Django>=4.2,<5.0
@@ -18,4 +19,4 @@ twilio
 whitenoise>=6.4.0
 daphne
 django-redis
-gunicorn 
+gunicorn
