Add production docker-compose and update frontend paths
Introduced a new docker-compose.yml for production with full service definitions, removed obsolete .env copy and docker-compose files, and updated frontend build and volume paths in docker-compose.dev.yml to use the new directory structure.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,7 +69,7 @@ services:
       - "9092:9092"
       - "9094:9094"
     volumes:
-      - kafka-data:/bitnami
+      - kafka-data:/bitnamabi
     depends_on:
       - zookeeper
     networks:
@@ -438,13 +438,13 @@ services:
   # Frontend Development Server
   frontend:
     build:
-      context: ../dev/agrovet
+      context: ../../dev/agrovet
       dockerfile: Dockerfile
     container_name: agrovet-frontend
     ports:
       - "5173:5173"
     volumes:
-      - ../dev/agrovet:/app
+      - ../../dev/agrovet:/app
       - /app/node_modules
       - /app/dist
     environment:
