implementing business editing

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -438,13 +438,13 @@ services:
   # Frontend Development Server
   frontend:
     build:
-      context: ../dev/agrovet
+      context: ./frontend/agrovet
       dockerfile: Dockerfile
     container_name: agrovet-frontend
     ports:
       - "5173:5173"
     volumes:
-      - ../dev/agrovet:/app
+      - ./frontend/agrovet:/app
       - /app/node_modules
       - /app/dist
     environment:
